--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1,28 +1,28 @@
 % Encoding: UTF-8
 
 @Article{hare1994,
-  author    = {Hare, AR and Morrison, GR},
-  title     = {Near-field soft X-ray diffraction modelled by the multislice method},
+  author    = {Hare, A. R. and Morrison, G. R.},
   journal   = {Journal of Modern Optics},
+  title     = {Near-field soft X-ray diffraction modelled by the multislice method},
   year      = {1994},
-  volume    = {41},
   number    = {1},
   pages     = {31--48},
+  volume    = {41},
   file      = {hare:hare1994.pdf:PDF;:hare1994.pdf:PDF;hare1994.pdf:hare1994.pdf:PDF},
   publisher = {Taylor \& Francis},
 }
 
 @Book{kirkland2010,
-  title     = {Advanced computing in electron microscopy},
+  author    = {Kirkland, Earl J.},
   publisher = {Springer Science \& Business Media},
+  title     = {Advanced computing in electron microscopy},
   year      = {2010},
-  author    = {Kirkland, Earl J},
   edition   = {2.},
   file      = {kirkland2010.pdf:kirkland2010.pdf:PDF},
 }
 
 @PhdThesis{thibault2007,
-  author = {{Thibault}, P.},
+  author = {Thibault, P.},
   school = {Cornell University},
   title  = {{Algorithmic methods in diffraction microscopy}},
   year   = {2007},
@@ -42,33 +42,32 @@
 }
 
 @Article{luke2004,
-  author    = {Luke, D Russell},
-  title     = {Relaxed averaged alternating reflections for diffraction imaging},
+  author    = {Luke, D. Russell},
   journal   = {Inverse Problems},
+  title     = {Relaxed averaged alternating reflections for diffraction imaging},
   year      = {2004},
-  volume    = {21},
   number    = {1},
   pages     = {37},
+  volume    = {21},
   file      = {luke2004.pdf:luke2004.pdf:PDF},
   publisher = {IOP Publishing},
 }
 
 @Article{fienup1978,
-  author    = {J. R. Fienup},
-  title     = {Reconstruction of an object from the modulus of its Fourier transform},
+  author    = {Fienup, J. R.},
   journal   = {Opt. Lett.},
+  title     = {Reconstruction of an object from the modulus of its Fourier transform},
   year      = {1978},
-  volume    = {3},
   number    = {1},
   pages     = {27--29},
-  month     = jul,
+  volume    = {3},
   abstract  = {We present a digital method for solving the phase-retrieval problem of optical-coherence theory: the reconstruction of a general object from the modulus of its Fourier transform. This technique should be useful for obtaining high-resolution imagery from interferometer data.},
   file      = {:fienup1978 - Reconstruction of an object from the modulus of its Fourier transform.pdf:PDF;fienup1978.pdf:fienup1978 - Reconstruction of an object from the modulus of its Fourier transform.pdf:PDF},
   publisher = {OSA},
 }
 
 @Book{goodman2000,
-  author    = {Goodman, Joseph W},
+  author    = {Goodman, Joseph W.},
   publisher = {John Wiley \& Sons},
   title     = {Statistical Optics},
   year      = {2000},
@@ -96,31 +95,31 @@
 }
 
 @Misc{pnpoly,
-  author = {Randolph Franklin},
+  author = {Franklin, Randolph},
+  note   = {Abruf am 01.12.2016},
   title  = {Point Inclusion in Polygon Test},
   year   = {2003},
-  note   = {Abruf am 01.12.2016},
   url    = {https://www.ecse.rpi.edu/~wrf/Research/Short_Notes/pnpoly.html},
 }
 
 @Article{chapman2006,
-  author    = {Chapman, Henry N and Barty, Anton and Bogan, Michael J and Boutet, S{\'e}bastien and Frank, Matthias and Hau-Riege, Stefan P and Marchesini, Stefano and Woods, Bruce W and Bajt, Sa{\v{s}}a and Benner, W Henry and others},
-  title     = {Femtosecond diffractive imaging with a soft-X-ray free-electron laser},
+  author    = {Chapman, Henry N. and Barty, Anton and Bogan, Michael J. and Boutet, S{\'e}bastien and Frank, Matthias and Hau-Riege, Stefan P. and Marchesini, Stefano and Woods, Bruce W. and Bajt, Sa{\v{s}}a and Benner, W. Henry and others},
   journal   = {Nature Physics},
+  title     = {Femtosecond diffractive imaging with a soft-X-ray free-electron laser},
   year      = {2006},
-  volume    = {2},
   number    = {12},
   pages     = {839--843},
+  volume    = {2},
   file      = {chapman2006.pdf:chapman2006.pdf:PDF},
   publisher = {Nature Publishing Group},
 }
 
 @InBook{bohren1983,
+  author    = {Bohren, Craig F. and Huffman, Donald R.},
   pages     = {112f, 95, 127f},
-  title     = {Absorption and scattering of light by small particles},
   publisher = {John Wiley \& Sons},
+  title     = {Absorption and scattering of light by small particles},
   year      = {1983},
-  author    = {Bohren, Craig F and Huffman, Donald R},
   edition   = {1.},
 }
 
@@ -135,14 +134,14 @@
 }
 
 @InProceedings{lobaz2013,
-  author       = {Lobaz, P},
-  title        = {Discrete calculation of the off-axis angular spectrum based light propagation},
+  author       = {Lobaz, P.},
   booktitle    = {Journal of Physics: Conference Series},
+  title        = {Discrete calculation of the off-axis angular spectrum based light propagation},
   year         = {2013},
-  volume       = {415},
   number       = {1},
-  pages        = {012040},
   organization = {IOP Publishing},
+  pages        = {012040},
+  volume       = {415},
   file         = {:lobaz2013 - Discrete calculation of the off-axis angular spectrum based light propagation.pdf:PDF},
 }
 
@@ -169,22 +168,22 @@
 }
 
 @PhdThesis{maia2010,
-  author = {Maia, F},
-  title  = {Ultrafast Coherent X-ray Diffractive Nanoimaging},
+  author = {Maia, F.},
   school = {Uppsala},
+  title  = {Ultrafast Coherent X-ray Diffractive Nanoimaging},
   year   = {2010},
 }
 
 @InCollection{schultz2013chapter7,
   author    = {Boutu, Willem and Carré, Bertrand and Merdji, Hamed},
-  title     = {Coherent Diffractive Imaging},
   booktitle = {Attosecond and XUV Spectroscopy: Ultrafast Dynamics and Spectroscopy},
   publisher = {John Wiley \& Sons},
+  title     = {Coherent Diffractive Imaging},
   year      = {2013},
-  editor    = {Schultz, Thomas and Vrakking, Marc},
   chapter   = {17},
-  pages     = {557-592},
   edition   = {1.},
+  editor    = {Schultz, Thomas and Vrakking, Marc},
+  pages     = {557--592},
 }
 
 @Book{schmidt2010,
@@ -210,13 +209,13 @@
 }
 
 @Article{cowley1957,
-  author    = {Cowley, John M and Moodie, Alexander},
-  title     = {The scattering of electrons by atoms and crystals. I. A new theoretical approach},
+  author    = {Cowley, John M. and Moodie, Alexander},
   journal   = {Acta Crystallographica},
+  title     = {The scattering of electrons by atoms and crystals. I. A new theoretical approach},
   year      = {1957},
-  volume    = {10},
   number    = {10},
   pages     = {609--619},
+  volume    = {10},
   file      = {cowley1957.pdf:cowley1957.pdf:PDF},
   publisher = {International Union of Crystallography},
 }
@@ -230,48 +229,49 @@
 }
 
 @Article{park2013,
-  author    = {Park, Hyung Joo and Loh, N Duane and Sierra, Raymond G and Hampton, Christina Y and Starodub, Dmitri and Martin, Andrew V and Barty, Anton and Aquila, Andrew and Schulz, Joachim and Steinbrener, Jan and others},
-  title     = {Toward unsupervised single-shot diffractive imaging of heterogeneous particles using X-ray free-electron lasers},
+  author    = {Park, Hyung Joo and Loh, N. Duane and Sierra, Raymond G. and Hampton, Christina Y. and Starodub, Dmitri and Martin, Andrew V. and Barty, Anton and Aquila, Andrew and Schulz, Joachim and Steinbrener, Jan and others},
   journal   = {Optics express},
+  title     = {Toward unsupervised single-shot diffractive imaging of heterogeneous particles using X-ray free-electron lasers},
   year      = {2013},
-  volume    = {21},
   number    = {23},
   pages     = {28729--28742},
+  volume    = {21},
   file      = {park2013.pdf:park2013.pdf:PDF},
   publisher = {Optical Society of America},
 }
 
 @Article{stadler2008,
-  author    = {Stadler, Lorenz-M and Gutt, Christian and Autenrieth, Tina and Leupold, Olaf and Rehbein, Stefan and Chushkin, Yuriy and Gr{\"u}bel, Gerhard},
-  title     = {Hard x ray holographic diffraction imaging},
+  author    = {Stadler, Lorenz-M. and Gutt, Christian and Autenrieth, Tina and Leupold, Olaf and Rehbein, Stefan and Chushkin, Yuriy and Gr{\"u}bel, Gerhard},
   journal   = {Physical review letters},
+  title     = {Hard x ray holographic diffraction imaging},
   year      = {2008},
-  volume    = {100},
   number    = {24},
   pages     = {245503},
+  volume    = {100},
   file      = {:stadler2008 - Hard x ray holographic diffraction imaging.pdf:PDF},
   publisher = {APS},
 }
 
 @Article{marchesini2003,
-  author    = {Marchesini, Stefano and He, H and Chapman, Henry N and Hau-Riege, Stefan P and Noy, A and Howells, Malcolm R and Weierstall, U and Spence, John CH},
-  title     = {X-ray image reconstruction from a diffraction pattern alone},
+  author    = {Marchesini, Stefano and He, H. and Chapman, Henry N. and Hau-Riege, Stefan P. and Noy, A. and Howells, Malcolm R. and Weierstall, U. and Spence, John C. H.},
   journal   = {Physical Review B},
+  title     = {X-ray image reconstruction from a diffraction pattern alone},
   year      = {2003},
-  volume    = {68},
   number    = {14},
   pages     = {140101},
+  volume    = {68},
+  doi       = {10.1103/physrevb.68.140101},
   file      = {:marchesini2003 - X-ray image reconstruction from a diffraction pattern alone.pdf:PDF},
   publisher = {APS},
 }
 
 @Article{cowley1970,
-  author  = {Cowley, JM and Grinton, GR},
-  title   = {Phase and Amplitude Contrast from Biological Materials},
+  author  = {Cowley, J. M. and Grinton, G. R.},
   journal = {Proc. Seventh Int. Congr. Electron Microsc.(Grenoble)},
+  title   = {Phase and Amplitude Contrast from Biological Materials},
   year    = {1970},
-  volume  = {1},
   pages   = {59--60},
+  volume  = {1},
 }
 
 @Article{lalor1968,
@@ -287,7 +287,7 @@
 }
 
 @Book{james1952,
-  author    = {James, Reginald W},
+  author    = {James, Reginald W.},
   publisher = {G. Bell and sons},
   title     = {The Optical Principles of the Diffraction of X-rays},
   year      = {1952},
@@ -306,13 +306,13 @@
 }
 
 @Article{huang2010,
-  author    = {Huang, Xiaojing and Nelson, Johanna and Steinbrener, Jan and Kirz, Janos and Turner, Joshua J and Jacobsen, Chris},
-  title     = {Incorrect support and missing center tolerances of phasing algorithms},
+  author    = {Huang, Xiaojing and Nelson, Johanna and Steinbrener, Jan and Kirz, Janos and Turner, Joshua J. and Jacobsen, Chris},
   journal   = {Optics express},
+  title     = {Incorrect support and missing center tolerances of phasing algorithms},
   year      = {2010},
-  volume    = {18},
   number    = {25},
   pages     = {26441--26449},
+  volume    = {18},
   file      = {huang2010.pdf:huang2010.pdf:PDF},
   publisher = {Optical Society of America},
 }
@@ -336,14 +336,14 @@
 }
 
 @InCollection{trigg2005,
-  author    = {Kazuo Ohtaka},
+  author    = {Ohtaka, Kazuo},
   booktitle = {Mathematical tools for physicists},
   publisher = {John Wiley \& Sons},
   title     = {Green's Functions},
   year      = {2005},
   edition   = {1.},
   editor    = {Trigg, George L},
-  pages     = {165-168},
+  pages     = {165--168},
   file      = {trigg2005.pdf:trigg2005.pdf:PDF},
   groups    = {msc},
 }
@@ -358,18 +358,18 @@
 }
 
 @Article{henke,
-  author  = {Henke, B.L and Gullikson, E.M. and Davis, J.C.},
-  title   = {X-ray interactions: photoabsorption, scattering, transmission, and reflection at E=50-30000 eV, Z=1-92},
+  author  = {Henke, B. L. and Gullikson, E. M. and Davis, J. C.},
   journal = {Atomic Data and Nuclear Data Tables Vol. 54 (no.2), 181-342},
+  title   = {X-ray interactions: photoabsorption, scattering, transmission, and reflection at E=50-30000 eV, Z=1-92},
   year    = {1993},
 }
 
 @MastersThesis{sander2014,
-  author = {Katharina Sander},
+  author = {Sander, Katharina},
   school = {Universität Rostock},
   title  = {Microscopic description of single-shot diffractive imaging of clusters via the dyadic Green's function approach},
   year   = {2014},
-  file   = {:C\:\\Users\\Felix\\Dropbox\\bachelor\\material\\sander2014.pdf:PDF;sander2014.pdf:sander2014.pdf:PDF},
+  file   = {:C\:/Users/Felix/Dropbox/bachelor/material/sander2014.pdf:PDF;sander2014.pdf:sander2014.pdf:PDF},
 }
 
 @Article{drezek1999,
@@ -398,41 +398,39 @@
 
 @Article{seibert2011,
   author    = {Seibert, M. Marvin and Ekeberg, Tomas and Maia, Filipe R. N. C. and Svenda, Martin and Andreasson, Jakob and Jonsson, Olof and Odic, Dusko and Iwan, Bianca and Rocker, Andrea and Westphal, Daniel and Hantke, Max and DePonte, Daniel P. and Barty, Anton and Schulz, Joachim and Gumprecht, Lars and Coppola, Nicola and Aquila, Andrew and Liang, Mengning and White, Thomas A. and Martin, Andrew and Caleman, Carl and Stern, Stephan and Abergel, Chantal and Seltzer, Virginie and Claverie, Jean-Michel and Bostedt, Christoph and Bozek, John D. and Boutet, Sebastien and Miahnahri, A. Alan and Messerschmidt, Marc and Krzywinski, Jacek and Williams, Garth and Hodgson, Keith O. and Bogan, Michael J. and Hampton, Christina Y. and Sierra, Raymond G. and Starodub, Dmitri and Andersson, Inger and Bajt, Sasa and Barthelmess, Miriam and Spence, John C. H. and Fromme, Petra and Weierstall, Uwe and Kirian, Richard and Hunter, Mark and Doak, R. Bruce and Marchesini, Stefano and Hau-Riege, Stefan P. and Frank, Matthias and Shoeman, Robert L. and Lomb, Lukas and Epp, Sascha W. and Hartmann, Robert and Rolles, Daniel and Rudenko, Artem and Schmidt, Carlo and Foucar, Lutz and Kimmel, Nils and Holl, Peter and Rudek, Benedikt and Erk, Benjamin and Homke, Andre and Reich, Christian and Pietschner, Daniel and Weidenspointner, Georg and Struder, Lothar and Hauser, Gunter and Gorke, Hubert and Ullrich, Joachim and Schlichting, Ilme and Herrmann, Sven and Schaller, Gerhard and Schopper, Florian and Soltau, Heike and Kuhnel, Kai-Uwe and Andritschke, Robert and Schroter, Claus-Dieter and Krasniqi, Faton and Bott, Mario and Schorb, Sebastian and Rupp, Daniela and Adolph, Marcus and Gorkhover, Tais and Hirsemann, Helmut and Potdevin, Guillaume and Graafsma, Heinz and Nilsson, Bjorn and Chapman, Henry N. and Hajdu, Janos},
-  title     = {Single mimivirus particles intercepted and imaged with an X-ray laser},
   journal   = {Nature},
+  title     = {Single mimivirus particles intercepted and imaged with an X-ray laser},
   year      = {2011},
-  volume    = {470},
+  issn      = {0028-0836},
   number    = {7332},
   pages     = {78--81},
-  month     = feb,
-  issn      = {0028-0836},
+  volume    = {470},
   comment   = {10.1038/nature09748},
   file      = {seibert2011.pdf:seibert2011.pdf:PDF},
   publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
 }
 
 @Article{shechtman2015,
-  author   = {Y. Shechtman and Y. C. Eldar and O. Cohen and H. N. Chapman and J. Miao and M. Segev},
-  title    = {Phase Retrieval with Application to Optical Imaging: A contemporary overview},
+  author   = {Shechtman, Y. and Eldar, Y. C. and Cohen, O. and Chapman, H. N. and Miao, J. and Segev, M.},
   journal  = {IEEE Signal Processing Magazine},
+  title    = {Phase Retrieval with Application to Optical Imaging: A contemporary overview},
   year     = {2015},
-  volume   = {32},
-  number   = {3},
-  pages    = {87-109},
-  month    = may,
   issn     = {1053-5888},
+  number   = {3},
+  pages    = {87--109},
+  volume   = {32},
   file     = {:shechtman2015 - Phase Retrieval with Application to Optical Imaging_ A contemporary overview.pdf:PDF},
   keywords = {image processing;reviews;biology;chemistry;engineering;optical imaging;phase retrieval;physics;review;signal processing;Extraterrestrial measurements;Holography;Optical diffraction;Optical imaging;Optical signal processing;Optical variables measurement;Phase measurement},
 }
 
 @Article{bergh2008,
-  author    = {Bergh, Magnus and Huldt, G{\"o}sta and Timneanu, Nicusor and Maia, Filipe RNC and Hajdu, Janos},
-  title     = {Feasibility of imaging living cells at subnanometer resolutions by ultrafast X-ray diffraction},
+  author    = {Bergh, Magnus and Huldt, G{\"o}sta and Timneanu, Nicusor and Maia, Filipe R. N. C. and Hajdu, Janos},
   journal   = {Quarterly reviews of biophysics},
+  title     = {Feasibility of imaging living cells at subnanometer resolutions by ultrafast X-ray diffraction},
   year      = {2008},
-  volume    = {41},
   number    = {3-4},
   pages     = {181--204},
+  volume    = {41},
   publisher = {Cambridge Univ Press},
 }
 
@@ -446,9 +444,9 @@
 }
 
 @InBook{griffiths2005,
-  author    = {Griffiths, D.J.},
+  author    = {Griffiths, D. J.},
   chapter   = {11},
-  pages     = {408-415},
+  pages     = {408--415},
   publisher = {Pearson Prentice Hall},
   title     = {Introduction to Quantum Mechanics},
   year      = {2005},
@@ -459,17 +457,18 @@
 
 @Article{he2004,
   author  = {He, H. and Weierstall, U. and Spence, J. C. H. and Howells, M. and Padmore, H. A. and Marchesini, S. and Chapman, H. N.},
-  title   = {Use of extended and prepared reference objects in experimental Fourier transform x-ray holography},
   journal = {Applied Physics Letters},
+  title   = {Use of extended and prepared reference objects in experimental Fourier transform x-ray holography},
   year    = {2004},
-  volume  = {85},
   number  = {13},
-  pages   = {2454-2456},
+  pages   = {2454--2456},
+  volume  = {85},
+  doi     = {10.1063/1.1795360},
   file    = {:he2004 - Use of extended and prepared reference objects in experimental Fourier transform x-ray holography.pdf:PDF},
 }
 
 @Misc{fennel,
-  author       = {Thomas Fennel},
+  author       = {Fennel, Thomas},
   howpublished = {Private Mitteilung},
   year         = {2016},
 }
@@ -487,42 +486,41 @@
 }
 
 @Article{eisebitt2004,
-  author    = {Eisebitt, S and L{\"u}ning, J and Schlotter, WF and L{\"o}rgen, M and Hellwig, O and Eberhardt, W and St{\"o}hr, J},
-  title     = {Lensless imaging of magnetic nanostructures by X-ray spectro-holography},
+  author    = {Eisebitt, S. and L{\"u}ning, J. and Schlotter, W. F. and L{\"o}rgen, M. and Hellwig, O. and Eberhardt, W. and St{\"o}hr, J.},
   journal   = {Nature},
+  title     = {Lensless imaging of magnetic nanostructures by X-ray spectro-holography},
   year      = {2004},
-  volume    = {432},
   number    = {7019},
   pages     = {885--888},
+  volume    = {432},
   file      = {:eisebitt2004 - Lensless imaging of magnetic nanostructures by X-ray spectro-holography.pdf:PDF},
   publisher = {Nature Publishing Group},
 }
 
 @Article{gorkhover2016,
-  author  = {Gorkhover, Tais and Ulmer, Anatoli and Ferguson, Ken and Bucher,Max and Maia, Filipe and Bielecki, Johan and Ekeberg, Tomas and Hantke, Max and Daurer, Benedikt and Nettelblad, Carl and Andreasson, Jakob and Barty, Anton and Bruza, Petr and Carron, Sebastian and Deponte, Daniel and Hasse, Dirk and Krzywinski, Jacek and Larsson, Daniel and Morgan, Andrew and Muhlig, Kerstin and Muller, Maria and Okamoto, Kenta and Pietrini,Alberto and Rupp, Daniela and Sauppe, Mario and van der Schot, Gijs and Seibert, Marvin and Sellberg, Jonas and Svenda, Martin and Swiggers, Michelle and Timneanu, Nicusor and Westphal, Daniel and Williams, Garth and Zani, Alessandro and Chapman, Henry and Faigel, Gyula and Thomas Moller and Hajdu, Janos and Bostedt,Christoph},
-  title   = {Femtosecond X-ray Fourier holography on free nanoparticles},
+  author  = {Gorkhover, Tais and Ulmer, Anatoli and Ferguson, Ken and Bucher, Max and Maia, Filipe and Bielecki, Johan and Ekeberg, Tomas and Hantke, Max and Daurer, Benedikt and Nettelblad, Carl and Andreasson, Jakob and Barty, Anton and Bruza, Petr and Carron, Sebastian and Deponte, Daniel and Hasse, Dirk and Krzywinski, Jacek and Larsson, Daniel and Morgan, Andrew and Muhlig, Kerstin and Muller, Maria and Okamoto, Kenta and Pietrini, Alberto and Rupp, Daniela and Sauppe, Mario and van der Schot, Gijs and Seibert, Marvin and Sellberg, Jonas and Svenda, Martin and Swiggers, Michelle and Timneanu, Nicusor and Westphal, Daniel and Williams, Garth and Zani, Alessandro and Chapman, Henry and Faigel, Gyula and Moller, Thomas and Hajdu, Janos and Bostedt, Christoph},
   journal = {Manuscript},
+  title   = {Femtosecond X-ray Fourier holography on free nanoparticles},
   year    = {2016},
 }
 
 @InBook{kunz1993,
+  author    = {Kunz, K. S. and Luebbers, R. J.},
   pages     = {31},
-  title     = {The Finite Difference Time Domain Method for Electromagnetics},
   publisher = {Taylor \& Francis},
+  title     = {The Finite Difference Time Domain Method for Electromagnetics},
   year      = {1993},
-  author    = {Kunz, K.S. and Luebbers, R.J.},
   edition   = {1.},
 }
 
 @Article{fienup1982,
-  author    = {J. R. Fienup},
-  title     = {Phase retrieval algorithms: a comparison},
+  author    = {Fienup, J. R.},
   journal   = {Appl. Opt.},
+  title     = {Phase retrieval algorithms: a comparison},
   year      = {1982},
-  volume    = {21},
   number    = {15},
   pages     = {2758--2769},
-  month     = aug,
+  volume    = {21},
   abstract  = {Iterative algorithms for phase retrieval from intensity data are compared to gradient search methods. Both the problem of phase retrieval from two intensity measurements (in electron microscopy or wave front sensing) and the problem of phase retrieval from a single intensity measurement plus a non-negativity constraint (in astronomy) are considered, with emphasis on the latter. It is shown that both the error-reduction algorithm for the problem of a single intensity measurement and the Gerchberg-Saxton algorithm for the problem of two intensity measurements converge. The error-reduction algorithm is also shown to be closely related to the steepest-descent method. Other algorithms, including the input--output algorithm and the conjugate-gradient method, are shown to converge in practice much faster than the error-reduction algorithm. Examples are shown.},
   publisher = {OSA},
 }
@@ -536,16 +534,16 @@
 }
 
 @Book{goodman2005,
-  title     = {Introduction to Fourier optics},
+  author    = {Goodman, Joseph W.},
   publisher = {Roberts and Company Publishers},
+  title     = {Introduction to Fourier optics},
   year      = {2005},
-  author    = {Goodman, Joseph W},
   edition   = {3.},
   file      = {goodman2005.pdf:goodman2005.pdf:PDF},
 }
 
 @Book{goodman2007,
-  author    = {Goodman, Joseph W},
+  author    = {Goodman, Joseph W.},
   publisher = {Roberts \& Company},
   title     = {Speckle Phenomena in Optics: Theory and Applications},
   year      = {2007},
@@ -553,7 +551,7 @@
 }
 
 @Book{agarwal2013,
-  author    = {Agarwal, Girish S},
+  author    = {Agarwal, Girish S.},
   publisher = {Cambridge University Press},
   title     = {Quantum Optics},
   year      = {2013},
@@ -607,7 +605,7 @@
   groups   = {msc},
 }
 
-@Article{galuber2006,
+@Article{glauber2006,
   author  = {Glauber, Roy J.},
   journal = {Rev. Mod. Phys.},
   title   = {Nobel Lecture: One hundred years of light quanta},
@@ -624,7 +622,7 @@
   journal = {Acta Physica Polonica B},
   title   = {The physics of Hanbury Brown-Twiss intensity interferometry: from stars to nuclear collisions},
   year    = {1997},
-  pages   = {1839-1884},
+  pages   = {1839--1884},
   volume  = {29},
   groups  = {msc},
 }
@@ -634,7 +632,7 @@
   journal = {Physica D: Nonlinear Phenomena},
   title   = {The concept of degree of coherence and its application to optical problems},
   year    = {1938},
-  pages   = {785-795},
+  pages   = {785--795},
   volume  = {5},
   groups  = {msc},
 }
@@ -669,11 +667,10 @@
 }
 
 @Article{singer2013,
-  author  = {Singer, Andrej and Lorenz, Ulf and Sorgenfrei, Nomi and Gerasimova, Natalia and Gulden, Johannes and Yefanov, O and Kurta, Ruslan and Shabalin, Anatoly and Dronyak, R and Treusch, R. and Kocharyan, Vitali and Weckert, E and Wurth, W and Vartanyants, I},
+  author  = {Singer, Andrej and Lorenz, Ulf and Sorgenfrei, Nomi and Gerasimova, Natalia and Gulden, Johannes and Yefanov, O. and Kurta, Ruslan and Shabalin, Anatoly and Dronyak, R. and Treusch, R. and Kocharyan, Vitali and Weckert, E. and Wurth, W. and Vartanyants, I.},
   journal = {Physical review letters},
   title   = {Hanbury Brown-Twiss Interferometry at a Free-Electron Laser},
   year    = {2013},
-  month   = {07},
   pages   = {034802},
   volume  = {111},
   doi     = {10.1103/PhysRevLett.111.034802},
@@ -681,7 +678,7 @@
 }
 
 @Article{santra2009,
-  author    = {R Santra},
+  author    = {Santra, R.},
   journal   = {Journal of Physics B: Atomic, Molecular and Optical Physics},
   title     = {Concepts in X-Ray Physics},
   year      = {2009},
@@ -699,7 +696,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{krause1979,
-  author  = {Krause, M. O. and Oliver,J . H.},
+  author  = {Krause, M. O. and Oliver, J. . H.},
   journal = {Journal of Physical and Chemical Reference Data},
   title   = {Natural widths of atomic K and L levels, K{$\alpha$} X-ray lines and several KLL Auger lines},
   year    = {1979},
@@ -711,12 +708,11 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{trost2020,
-  author    = {Trost, Fabian and Ayyer, Kartik and Chapman, Henry N},
+  author    = {Trost, Fabian and Ayyer, Kartik and Chapman, Henry N.},
   journal   = {New Journal of Physics},
   title     = {Photon statistics and signal to noise ratio for incoherent diffraction imaging},
   year      = {2020},
   issn      = {1367-2630},
-  month     = {Aug},
   number    = {8},
   pages     = {083070},
   volume    = {22},
@@ -730,7 +726,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   journal  = {Journal of Synchrotron Radiation},
   title    = {{Determination of X-ray pulse duration via intensity correlation measurements of X-ray fluorescence}},
   year     = {2019},
-  month    = {Nov},
   number   = {6},
   pages    = {2050--2054},
   volume   = {26},
@@ -741,7 +736,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{sorum1987,
-  author   = {Sorum, H},
+  author   = {Sorum, H.},
   journal  = {Journal of Physics F: Metal Physics},
   title    = {The K{$\alpha$}1,2 X-ray spectra of the 3d transition metals Cr, Fe, Co, Ni and Cu},
   year     = {1987},
@@ -754,11 +749,10 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{lajunen04,
-  author    = {Hanna Lajunen and Jani Tervo and Pasi Vahimaa},
+  author    = {Lajunen, Hanna and Tervo, Jani and Vahimaa, Pasi},
   journal   = {J. Opt. Soc. Am. A},
   title     = {Overall coherence and coherent-mode expansion of spectrally partially coherent plane-wave pulses},
   year      = {2004},
-  month     = {Nov},
   number    = {11},
   pages     = {2117--2123},
   volume    = {21},
@@ -770,7 +764,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{mpccd,
-  author  = {Kameshima,Takashi and Ono,Shun and Kudo,Togo and Ozaki,Kyosuke and Kirihara,Yoichi and Kobayashi,Kazuo and Inubushi,Yuichi and Yabashi,Makina and Horigome,Toshio and Holland,Andrew and Holland,Karen and Burt,David and Murao,Hajime and Hatsui,Takaki},
+  author  = {Kameshima, Takashi and Ono, Shun and Kudo, Togo and Ozaki, Kyosuke and Kirihara, Yoichi and Kobayashi, Kazuo and Inubushi, Yuichi and Yabashi, Makina and Horigome, Toshio and Holland, Andrew and Holland, Karen and Burt, David and Murao, Hajime and Hatsui, Takaki},
   journal = {Review of Scientific Instruments},
   title   = {Development of an X-ray pixel detector with multi-port charge-coupled device for X-ray free-electron laser experiments},
   year    = {2014},
@@ -782,7 +776,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{tono2013,
-  author   = {K Tono and T Togashi and Y Inubushi and T Sato and T Katayama and K Ogawa and H Ohashi and H Kimura and S Takahashi and K Takeshita and H Tomizawa and S Goto and T Ishikawa and M Yabashi},
+  author   = {Tono, K. and Togashi, T. and Inubushi, Y. and Sato, T. and Katayama, T. and Ogawa, K. and Ohashi, H. and Kimura, H. and Takahashi, S. and Takeshita, K. and Tomizawa, H. and Goto, S. and Ishikawa, T. and Yabashi, M.},
   journal  = {New Journal of Physics},
   title    = {Beamline, experimental stations and photon beam diagnostics for the hard x-ray free electron laser of {SACLA}},
   year     = {2013},
@@ -813,9 +807,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   ty            = {JOUR},
 }
 
-@Article{,
-}
-
 @Book{butz2015,
   author    = {Butz, T.},
   publisher = {Springer International Publishing},
@@ -824,6 +815,44 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   isbn      = {9783319169859},
   series    = {Undergraduate Lecture Notes in Physics},
   url       = {https://books.google.de/books?id=pytACQAAQBAJ},
+}
+
+@Article{goodman1976,
+  author    = {Goodman, J. W.},
+  journal   = {J. Opt. Soc. Am.},
+  title     = {Some fundamental properties of speckle},
+  year      = {1976},
+  number    = {11},
+  pages     = {1145--1150},
+  volume    = {66},
+  abstract  = {A speckle pattern formed in polarized monochromatic light may be regarded as resulting from a classical random walk in the complex plane. The resulting irradiance fluctuations obey negative exponential statistics, with ratio of standard deviation to mean (i.e., contrast) of unity. Reduction of this contrast, or smoothing of the speckle, requires diversity in polarization, space, frequency, or time. Addition of M uncorrelated speckle patterns on an intensity basis can reduce the contrast by 1/{\textsurd}M. However, addition of speckle patterns on a complex amplitude basis provides no reduction of contrast. The distribution of scale sizes in a speckle pattern (i.e., the Wiener spectrum) is investigated from a physical point of view.},
+  doi       = {10.1364/JOSA.66.001145},
+  keywords  = {Laser light; Laser speckle; Polarization; Spatial frequency; Speckle patterns; Wavefronts},
+  publisher = {OSA},
+  url       = {http://www.osapublishing.org/abstract.cfm?URI=josa-66-11-1145},
+}
+
+@Article{mandel1959,
+  author   = {L Mandel},
+  journal  = {Proceedings of the Physical Society},
+  title    = {Fluctuations of Photon Beams: The Distribution of the Photo-Electrons},
+  year     = {1959},
+  month    = {sep},
+  number   = {3},
+  pages    = {233--243},
+  volume   = {74},
+  abstract = {The probability distribution p(n, T) of the number of counts n from a photoelectric detector illuminated by coherent light for a time T is studied, by associating photons stochastically with Gaussian random waves. The cumulants of the distribution are derived and it is shown to be of the expected form for a boson assembly in a limited volume of phase space. The distribution depends strongly on the degeneracy of the light beam. It approaches the Poisson form for classical particles at low degeneracies and the distribution characteristic of classical waves at high degeneracies. The analysis leads, incidentally, to an expression for the extent of the unit cell of phase space in the direction of the beam. It is argued that this should be adopted as the measure of coherence length.},
+  doi      = {10.1088/0370-1328/74/3/301},
+}
+
+@Book{forbes2010,
+  author    = {Forbes, C. and Evans, M. and Hastings, N. and Peacock, B.},
+  publisher = {Wiley},
+  title     = {Statistical Distributions},
+  year      = {2010},
+  isbn      = {9780470390634},
+  series    = {Wiley Series in Probability and Statistics - Applied Probability and Statistics Section Series},
+  lccn      = {2009052131},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
